# micrompi

./: CMakeLists.txt
src/: CMakeLists.txt  mesh.c  mesh.h
tests/: CMakeLists.txt  test_cuboid_mesh_initialisation.cpp  test_main.cpp
